# WorkflowSimpleService

./: .coveragerc  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Dockerfile.dev  MANIFEST.in  Makefile  README.md  coverage.lcov  docker-compose-dev.yaml  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml
tests/: conftest.py  test_cli.py  test_edge_api.py  test_node_api.py  test_pathfinder.py  test_workflow_api.py  utils.py
tests/fixtures/: graph-dead-loop.json  graph-empty.json  graph-invalid-data.json  graph-invalid-edges.json  graph-invalid-nodes.json  graph-multigraph.json  graph-multiple-ends.json  graph-multiple-starts.json  graph-no-connected-end.json  graph-no-connected-start.json  graph-simple-loop.json  graph-simple.json
workflow/: __main__.py  app.py  cli.py  config.py  db.py  security.py
workflow/config/: __init__.py  default.toml
workflow/models/: content.py  graph.py  workflow.py
workflow/models/edge/: __init__.py  base.py  condition.py
workflow/models/node/: __init__.py  base.py  condition.py  end.py  factory.py  message.py  start.py
workflow/models/node/body/: __init__.py  base.py  condition.py  empty.py  message.py
workflow/routes/: __init__.py
workflow/routes/workflow/: __init__.py  dependencies.py  edge.py  node.py  root.py
workflow/utils/: __init__.py  exceptions.py  pathfinder.py  validation.py
workflowsimpleservice/: app.py  cli.py  config.py  security.py
workflowsimpleservice/models/: content.py
