[tool.poetry]
name = "workflow"
version = "0.1.0"
description = "Awesome workflow service created by LikoIlya"
authors = ["Illia Likhoshva <ilyaliko64@gmail.com>"]
license = "The Unlicence"
readme = "README.md"

[tool.poetry.scripts]
workflow = "workflow.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
typer = "^0.12.2"
dynaconf = "^3.2.5"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
rule-engine = "^4.4.0"
networkx = "^3.3"


[tool.poetry.group.development.dependencies]
codecov = "^2.1.13"
coverage = "^7.4.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-picked = "^0.5.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.3.5"
mkdocs = "^1.5.3"
gitchangelog = "^3.0.4"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
asyncio_mode = "auto"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 50